# pyFOAM_hexBlockMesh

./: .gitignore  README.md  pyproject.toml  setup.py
examples/nozzle_jet/py_scripts/: nozzle_jet.py
examples/nozzle_jet/system/: controlDict  fvSchemes  fvSolution
pyFOAM_hexBlockMesh/: ConnectedHexCollection.py  FaceCollection.py  HexBlock.py  Writer.py
pyFOAM_hexBlockMesh/connect_utils/: ConnectInfo.py
pyFOAM_hexBlockMesh/geometry_utils/: CoordinatesOrientation.py  HexBlockFaces.py  HexBlockMap.py  HexBlockVertices.py
pyFOAM_hexBlockMesh/writer_utils/: PolyMeshFile.py
tests/: test_ConnectInfo.py  test_ConnectedHexCollection.py  test_CoordinatesOrientation.py  test_FaceCollection.py  test_HexBlock.py  test_HexBlockFaces.py  test_HexBlockVertices.py  test_OGrid.py  test_Writer.py
